<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Licensed to the Apache Software Foundation (ASF) under one
  ~ or more contributor license agreements.  See the NOTICE file
  ~ distributed with this work for additional information
  ~ regarding copyright ownership.  The ASF licenses this file
  ~ to you under the Apache License, Version 2.0 (the
  ~ "License"); you may not use this file except in compliance
  ~ with the License.  You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing,
  ~ software distributed under the License is distributed on an
  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
  ~ KIND, either express or implied.  See the License for the
  ~ specific language governing permissions and limitations
  ~ under the License.
  -->

<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout"
    >



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:background="@color/backgroundColorLibrary">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/state_conformity"
                android:textColor="@color/standardTextLibrary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/resultProgresBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_marginTop="16dp"
                android:max="100"
                android:progress="33"
                android:progressDrawable="@drawable/circle_progress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/resultTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="75%"
                android:textColor="@color/standardTextLibrary"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/resultProgresBar"
                app:layout_constraintEnd_toEndOf="@+id/resultProgresBar"
                app:layout_constraintStart_toStartOf="@+id/resultProgresBar"
                app:layout_constraintTop_toTopOf="@+id/resultProgresBar" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:background="@color/dividerLineLibrary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resultDetailTextView" />

            <TextView
                android:id="@+id/dateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/audit_date"
                android:textColor="@color/standardTextLibrary"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <TextView
                android:id="@+id/declarantTile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/registrant_identity"
                android:textColor="@color/standardTextLibrary"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/dateTextView"
                app:layout_constraintTop_toBottomOf="@+id/dateTextView" />

            <TextView
                android:id="@+id/referentialTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/referential"
                android:textColor="@color/standardTextLibrary"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/declarantTextView"
                app:layout_constraintTop_toBottomOf="@+id/declarantTextView" />

            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/standardTextLibrary"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/dateTitle"
                app:layout_constraintTop_toBottomOf="@+id/dateTitle" />

            <TextView
                android:id="@+id/declarantTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/standardTextLibrary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/declarantTile"
                app:layout_constraintTop_toBottomOf="@+id/declarantTile" />

            <TextView
                android:id="@+id/referentialTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:textColor="@color/standardTextLibrary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/referentialTitle"
                app:layout_constraintTop_toBottomOf="@+id/referentialTitle" />

            <TextView
                android:id="@+id/technologieTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="left"
                android:textColor="@color/standardTextLibrary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/technologieTitle"
                app:layout_constraintTop_toBottomOf="@+id/technologieTitle" />

            <TextView
                android:id="@+id/resultDetailTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:gravity="center"
                android:textColor="@color/standardTextLibrary"
                app:layout_constraintEnd_toEndOf="@+id/divider"
                app:layout_constraintStart_toStartOf="@+id/divider"
                app:layout_constraintTop_toBottomOf="@+id/resultProgresBar" />

            <TextView
                android:id="@+id/technologieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/app_technologies"
                android:textColor="@color/standardTextLibrary"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/referentialTextView"
                app:layout_constraintTop_toBottomOf="@+id/referentialTextView" />

            <Button
                android:id="@+id/buttonSeeMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:padding="8dp"
                android:text="@string/details"
                android:textColor="@drawable/border_button_text"
                android:textSize="12sp"
                android:background="@drawable/border_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/technologieTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</merge>